--- a/Podcast.css
+++ b/Podcast.css
@@ -6,25 +6,17 @@
 }
 body {
   background: #333;
+
 }
+
+
 header {
   display: flex;
   justify-content: center;
   font-size: 6vw;
   color: white;
 }
-/* Nav Bar */
-/*Style-Color & Font*/
-.navbar a {
-  font-size: 25px;
-  color: #ededed;
-  text-decoration: none;
-  font-weight: 500;
-  margin-left: 50px;
-  transition: 1s; /* <--- Coloring effect timing*/
-  z-index: 1;
-}
-/*Position*/
+
 /* Nav Bar */
 /*Style-Color & Font*/
 .navbar a {
@@ -38,7 +30,7 @@ header {
 }
 /*Position*/
 .navbar {
-  padding-left: 300px;
+  padding-left: 200px;
   top: 100px;
   width: 35px;
   display: flex;
@@ -51,11 +43,172 @@ header {
   font-size: 20px;
 }
 
+/* Audio Controls */
 .soundbites {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   margin-top: 5%;
   margin-left: 37%;
 }
 
+/* Container */
+.container {
+  width: 400px;
+  background: transparent;
+  transition: ease-in-out 0.3s;
+  margin-bottom: 15px;
+}
+.container:hover {
+  width: 400px;
+  background: #99fb88;
+  transition: ease-in-out 0.3s;
+  margin-bottom: 15px;
+}
+/* Audio Controls CSS */
+audio::-webkit-media-controls-panel {
+  background-color: #56AEFF;
+}
+audio::-webkit-media-controls-play-button {
+  background-color: #B1D4E0;
+  border-radius: 50%;
+  transition: ease-in-out 0.3s;
+}
+audio::-webkit-media-controls-play-button:hover {
+  background-color: rgba(255, 255, 255, 0.89);
+  transition: ease-in-out 0.3s;
+}
+
+
+/* Side-Bar Content */
+.sidebar {
+  position: absolute;
+  right: 5%;
+  top: 20%; 
+}
+.sidecontent {
+  height: 500px;
+  width: 400px;
+  background: lightblue;
+}
+
+
+.sidebar-headers {
+  display: flex;
+  justify-content: center;
+} 
+
+/* Socials */
+.home-sci {
+  display: flex;
+  justify-content: center;
+  width: 400px;
+}
+.home-sci a {
+  position: relative;
+  margin: 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 2px 2px 2px #333;
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
+.home-sci a:hover {
+  color: #113e05;
+  border: 2px solid #99fb88;
+  border-radius: 50%;
+  text-shadow: 2px 2px 2px #333;
+}
+.home-sci a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  font-size: 20px;
+  color: #99fb88;
+  background: #99fb88;
+  text-shadow: 2px 2px 2px #333;
+  z-index: -1;
+  transition: .5s;
+}
+.home-sci a:hover::before {
+  width: 100%;
+}
+
+/* Stations */
+.home-sci2 {
+  display: flex;
+  justify-content: center;
+  width: 400px;
+}
+.home-sci2 a {
+  position: relative;
+  margin: 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 2px 2px 2px #333;
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
+.home-sci2 a:hover {
+  color: #113e05;
+  border: 2px solid #99fb88;
+  border-radius: 50%;
+  text-shadow: 2px 2px 2px #333;
+}
+.home-sci2 a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  font-size: 20px;
+  color: #99fb88;
+  background: #99fb88;
+  text-shadow: 2px 2px 2px #333;
+  z-index: -1;
+  transition: .5s;
+}
+.home-sci2 a:hover::before {
+  width: 100%;
+}
+
+
+.signup {
+  position: absolute;
+  left: 30%;
+  bottom: 45%;
+}
+
+label {
+  position: absolute;
+  left: 3%;
+}
+.submit {
+  position: absolute;
+  left: 35%;
+}
 
